--- a/.github/workflows/deploy-prod.yml
+++ b/.github/workflows/deploy-prod.yml
@@ -75,12 +75,19 @@ jobs:
           publish_branch: gh-pages
           destination_dir: ${{ steps.get-pr-number.outputs.pr_number }}
 
+      - name: Find PR comment
+        uses: peter-evans/find-comment@v3
+        id: fc
+        with:
+          issue-number: ${{ steps.get-pr-number.outputs.pr_number }}
+          comment-author: github-actions[bot]
+          body-includes: Preview the changes for PR
+
       - name: Create or update PR comment
         if: steps.get-pr-number.outputs.pr_number != 'main'
-        uses: peter-evans/create-or-update-comment@v3
+        uses: peter-evans/create-or-update-comment@v4
         with:
-          token: ${{ github.token }}
+          comment-id: ${{ steps.fc.outputs.comment-id }}
           issue-number: ${{ steps.get-pr-number.outputs.pr_number }}
           body: 'Preview the changes for PR #${{ steps.get-pr-number.outputs.pr_number }} (for commit ${{ github.event.workflow_run.head_sha }}) at https://gh.cp-algorithms.com/${{ steps.get-pr-number.outputs.pr_number }}/.'
-          body-includes: 'Preview the changes for PR'
-          mode: replace
+          edit-mode: replace
