--- a/.github/workflows/deploy-prod.yml
+++ b/.github/workflows/deploy-prod.yml
@@ -62,32 +62,10 @@ jobs:
         id: get-pr-number
         run: echo "pr_number=$(ls public)" >> $GITHUB_OUTPUT
 
-      - name: Configure git
-        run: |
-          git config --global user.name "github-actions[bot]"
-          git config --global user.email "github-actions[bot]@users.noreply.github.com"
-        
       - name: Deploy to gh-pages
-        uses: peaceiris/actions-gh-pages@v3
+        uses: peaceiris/actions-gh-pages@v4
         with:
           github_token: ${{ github.token }}
           publish_dir: public/${{ steps.get-pr-number.outputs.pr_number }}
-          publish_branch: gh-pages
           destination_dir: ${{ steps.get-pr-number.outputs.pr_number }}
-
-      - name: Find PR comment
-        uses: peter-evans/find-comment@v3
-        id: fc
-        with:
-          issue-number: ${{ steps.get-pr-number.outputs.pr_number }}
-          comment-author: github-actions[bot]
-          body-includes: Preview the changes for PR
-
-      - name: Create or update PR comment
-        if: steps.get-pr-number.outputs.pr_number != 'main'
-        uses: peter-evans/create-or-update-comment@v4
-        with:
-          comment-id: ${{ steps.fc.outputs.comment-id }}
-          issue-number: ${{ steps.get-pr-number.outputs.pr_number }}
-          body: 'Preview the changes for PR #${{ steps.get-pr-number.outputs.pr_number }} (for commit ${{ github.event.workflow_run.head_sha }}) at https://gh.cp-algorithms.com/${{ steps.get-pr-number.outputs.pr_number }}/.'
-          edit-mode: replace
+          commit_message: 'Preview for the PR #${{ steps.get-pr-number.outputs.pr_number }} (commit ${{ github.event.workflow_run.head_sha }})'
