Update actions/setup-python + set github-actions creds

--- a/.github/workflows/deploy-prod.yml
+++ b/.github/workflows/deploy-prod.yml
@@ -66,6 +66,8 @@ jobs:
         uses: peaceiris/actions-gh-pages@v4
         with:
           github_token: ${{ github.token }}
+          user_name: 'github-actions[bot]'
+          user_email: 'github-actions[bot]@users.noreply.github.com'
           publish_dir: public/${{ steps.get-pr-number.outputs.pr_number }}
           destination_dir: ${{ steps.get-pr-number.outputs.pr_number }}
           commit_message: 'Preview for the PR #${{ steps.get-pr-number.outputs.pr_number }} (commit ${{ github.event.workflow_run.head_sha }})'
