Factor out set-commit-status

--- a/.github/workflows/deploy-prod.yml
+++ b/.github/workflows/deploy-prod.yml
@@ -11,6 +11,11 @@ jobs:
     runs-on: ubuntu-latest
     if: github.event.workflow_run.conclusion == 'success' && github.event.workflow_run.event == 'push'
     steps:
+      - name: Attach run to the commit
+        uses: ./.github/actions/set-commit-status
+        with:
+          sha: ${{ github.event.workflow_run.head_sha }}
+
       - name: Checkout repository
         uses: actions/checkout@v4
 
@@ -44,16 +49,22 @@ jobs:
           projectId: cp-algorithms
           channelId: live
 
+
+      - name: Set final commit status
+        uses: ./.github/actions/set-commit-status
+        if: always()
+        with:
+          sha: ${{ github.event.workflow_run.head_sha }}
+  
+  
   deploy_github_pages:
     runs-on: ubuntu-latest
     if: github.event.workflow_run.conclusion == 'success'
     steps:
-      - name: Set commit status as pending
-        uses: myrotvorets/set-commit-status-action@v2.0.1
+      - name: Attach run to the commit
+        uses: ./.github/actions/set-commit-status
         with:
           sha: ${{ github.event.workflow_run.head_sha }}
-          token: ${{ github.token }}
-          description: ${{ job.status }}
 
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -80,10 +91,7 @@ jobs:
           full_commit_message: "Preview for ${{ steps.get-pr-number.outputs.pr_number != 'main' && '#' || '' }}${{ steps.get-pr-number.outputs.pr_number }} (${{ github.event.workflow_run.head_sha }}) at https://gh.cp-algorithms.com/${{ steps.get-pr-number.outputs.pr_number }}/"
 
       - name: Set final commit status
-        uses: myrotvorets/set-commit-status-action@v2.0.1
+        uses: ./.github/actions/set-commit-status
         if: always()
         with:
           sha: ${{ github.event.workflow_run.head_sha }}
-          token: ${{ github.token }}
-          status: ${{ job.status }}
-          description: ${{ job.status }}
