--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -56,6 +56,8 @@ markdown_extensions:
       permalink: true
 
 plugins:
+  - toggle-sidebar:
+    toggle_button: all
   - mkdocs-simple-hooks:
       hooks:
           on_env: "hooks:on_env"
