Test social links in the footer

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -79,6 +79,9 @@ plugins:
   - rss
 
 extra:
+  social:
+    - icon: fontawesome/brands/discord
+      link: https://discord.gg/HZ5AecN3KX
   analytics:
     provider: google
     property: G-7FLS2HCYHH
