Add links to the Discord server (#1493)

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -79,6 +79,11 @@ plugins:
   - rss
 
 extra:
+  social:
+    - icon: fontawesome/brands/github
+      link: https://github.com/cp-algorithms/cp-algorithms
+    - icon: fontawesome/brands/discord
+      link: https://discord.gg/HZ5AecN3KX
   analytics:
     provider: google
     property: G-7FLS2HCYHH
