Solicit donations on the website

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -84,6 +84,8 @@ extra:
       link: https://github.com/cp-algorithms/cp-algorithms
     - icon: fontawesome/brands/discord
       link: https://discord.gg/HZ5AecN3KX
+    - icon: fontawesome/solid/circle-dollar-to-slot
+      link: https://github.com/sponsors/cp-algorithms
   analytics:
     provider: google
     property: G-7FLS2HCYHH
