--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -31,6 +31,7 @@ edit_uri: edit/main/src/
 copyright: Text is available under the <a href="https://github.com/cp-algorithms/cp-algorithms/blob/main/LICENSE">Creative Commons Attribution Share Alike 4.0 International</a> License<br/>Copyright &copy; 2014 - 2025 by <a href="https://github.com/cp-algorithms/cp-algorithms/graphs/contributors">cp-algorithms contributors</a>
 extra_javascript:
   - javascript/config.js
+  - javascript/donation-banner.js
   - https://cdnjs.cloudflare.com/polyfill/v3/polyfill.min.js?features=es6
   - https://unpkg.com/mathjax@3/es5/tex-mml-chtml.js
 extra_css:
@@ -84,6 +85,8 @@ extra:
       link: https://github.com/cp-algorithms/cp-algorithms
     - icon: fontawesome/brands/discord
       link: https://discord.gg/HZ5AecN3KX
+    - icon: fontawesome/solid/circle-dollar-to-slot
+      link: https://github.com/sponsors/cp-algorithms
   analytics:
     provider: google
     property: G-7FLS2HCYHH
