--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -78,7 +78,7 @@ plugins:
       branch: !ENV [MKDOCS_GIT_COMMITERS_BRANCH, main]
   - macros
   - rss
-  - redirects
+  - redirects:
       redirect_maps:
         'algebra': 'number_theory'
 
